<resources>
    <string name="app_name">بلوك \nتشين</string>
    <!--bottom navigation-->
    <string name="navPrice">أسعار العملات</string>
    <string name="navAlarm">منبه العملات</string>
    <string name="navNews">الأخبار والتقارير</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currencies_price">أسعار العملات الالكترونية</string>
    <string name="last_update">آخر تحديث</string>
    <string name="header_currency">العملة</string>
    <string name="header_price">السعر</string>
    <string name="header_trading">التداول</string>
    <string name="currency_alarm_title">منبه العملات</string>
    <string name="please_select_currency_type">يرجى اختيار نوع العملة</string>
    <string name="please_set_alarm_amount">يرجى تحديد قيمة المنبه</string>
    <string name="add_alarm_button">إضافة منبه</string>
    <string name="news_and_reports">أخبار وتقارير</string>
    <string name="back_btn">رجوع</string>
    <string name="share_btn">مشاركة</string>
    <string name="facebook_share">مشاركة عبر فيسبوك</string>
    <string name="twitter_share_btn">مشاركة عبر تويتر</string>
    <string name="select_currency_dialog_title">اختر العملة التي تريدها</string>
    <string-array name="spinner_alarm_type">
        <item>أكبر من</item>
        <item>أصغر من</item>
    </string-array>

</resources>