<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layoutDirection="rtl"
            tools:context=".ui.fragments.PriceFragment">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currencies_price"
                style="@style/titleFont"
                />
            <TextView
                style="@style/subtitleFont"
                android:layout_marginStart="@dimen/_10sdp"
                android:id="@+id/tvLastUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_update"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/rvSelectedCurrencies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                />


            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="#F8F9FB"
                android:layoutDirection="rtl"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                >
                <TextView
                    android:layout_weight="6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_currency"
                    android:textAlignment="textStart"
                    android:paddingStart="@dimen/_20sdp"
                    style="@style/headerFont"/>
                <TextView
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/header_price"
                    android:textAlignment="textStart"
                    style="@style/headerFont"/>
                <TextView
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/header_trading"
                    style="@style/headerFont"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCurrencyList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                tools:listitem="@layout/currency_row" />
        </LinearLayout>
    </ScrollView>





</FrameLayout>