<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".ui.fragments.AlarmFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <TextView
            style="@style/titleFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/currency_alarm_title" />

        <TextView
            style="@style/subtitleFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/please_select_currency_type" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerCurrency"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overlapAnchor="false"
            android:padding="@dimen/_5sdp"
            tools:listitem="@layout/spinner_select_currency" />


        <TextView
            style="@style/subtitleFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layoutDirection="rtl"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/please_set_alarm_amount" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerAlarmType"
                android:layout_width="0dp"
                android:layout_height="@dimen/_49sdp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/shape_spinner_select_alarm_type"
                android:entries="@array/spinner_alarm_type"
                android:layoutDirection="rtl"
                android:overlapAnchor="false"
                android:popupBackground="#DFFFFFFF"
                android:textAlignment="center"
                tools:listitem="@android:layout/simple_spinner_dropdown_item" />

            <EditText
                android:id="@+id/tvMoneyAmountAlarm"
                android:layout_width="0dp"
                android:layout_height="@dimen/_49sdp"
                android:layout_weight="1"
                android:background="@drawable/shape_text_money_alarm"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:hint="$1000"
                style="@style/number"
                android:textAlignment="center" />
        </LinearLayout>

        <Button

            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_orange"
            android:fontFamily="@font/swissra_bold"
            android:padding="@dimen/_10sdp"
            android:text="@string/add_alarm_button"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@color/gray" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rvAlarms"
            android:layout_gravity="center_horizontal"
            tools:listitem="@layout/alarm_rv_item"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"/>
    </LinearLayout>


</FrameLayout>