<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.NewsDescription">
    <RelativeLayout
        android:id="@+id/topDiv"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textStyle="bold"/>
        <Button
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textStyle="bold"/>
    </RelativeLayout>
    <ScrollView
        android:layout_below="@+id/topDiv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/titleFont"
                android:text="انتعاش في قيمة العملات الرقمية الرئيسية تمثلت بارتفاع كل من البيتكوين والاثيريوم "
                android:textAlignment="textStart"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                />
            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subtitleFont"
                android:text=" 25 يناير 2018"
                android:layout_marginStart="@dimen/_10sdp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imgNews"
                android:src="@drawable/bitcoin"
                android:scaleType="centerCrop"/>
            <RelativeLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:id="@+id/shareButtonsDiv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_marginStart="@dimen/_10sdp"
                    android:id="@+id/btnFacebookShare"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_27sdp"
                    android:text="@string/facebook_share"
                    android:backgroundTint="#2D609B"
                    android:background="@drawable/fillet_share_button_shape"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8ssp"/>
                <Button
                    android:id="@+id/btnTwitterShare"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_27sdp"
                    android:text="@string/twitter_share_btn"
                    android:backgroundTint="#00C3F3"
                    android:background="@drawable/fillet_share_button_shape"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8ssp"
                    android:layout_toEndOf="@+id/btnFacebookShare"
                    android:layout_marginStart="@dimen/_10sdp"/>
                <ImageButton
                    android:id="@+id/btnShareIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_27sdp"
                    android:src="@drawable/ic_baseline_share_24"
                    android:layout_toEndOf="@+id/btnTwitterShare"
                    android:background="@drawable/fillet_share_button_shape"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:backgroundTint="#d8d8d8"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:textSize="@dimen/_12ssp"
                android:lineSpacingExtra="@dimen/_5ssp"
                android:fontFamily="@font/swissra_normal"
                android:text="باستثناء عملة الريبل والتي أظهرت أداءاً ضعيفاً طوال الأسابيع القليلة الماضية، فإن العملات الرقمية الرئيسية في السوق بما في ذلك البيتكوين والاثيريوم وكاردانو قد ارتفعت قيمتها. وفي غضون الـ 24 ساعة الماضية، ازداد سعر البيتكوين بنسبة 8% وارتفعت قيمة الإيثر بنسبة 10%، كما وارتفعت قيمة كاردانو بنسبة 15%. وبينما انخفض سعر العملات الثلاث بهامش ضئيل في الثلاث ساعات الماضية، إلا أنهم لا زالوا يسجلون مكاسب يومية كبيرة نسبياً."/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>